@@ -41,8 +41,7 @@ public class DayStatistics extends StatisticsAbstract {
 		cal.set(Calendar.SECOND, 0);
 		cal.set(Calendar.MILLISECOND, 0);
 		cal.roll(Calendar.DAY_OF_MONTH, true);
-		long nextStart = cal.getTimeInMillis();
-		return new Aggregate(startTime, nextStart);
+		return new Aggregate(startTime, cal.getTimeInMillis());
 	}
 
 	@Override
