@@ -42,8 +42,7 @@ public class MonthStatistics extends StatisticsAbstract {
 		cal.set(Calendar.SECOND, 0);
 		cal.set(Calendar.MILLISECOND, 0);
 		cal.roll(Calendar.MONTH, true);
-		long nextStart = cal.getTimeInMillis();
-		return new Aggregate(startTime, nextStart);
+		return new Aggregate(startTime, cal.getTimeInMillis());
 	}
 
 	@Override
